# backtest-platform

./: README.md  pyproject.toml  tasks.md
docs/: architecture.md  backtest-assumptions.md  event-contracts.md
src/backtest_platform/: __init__.py  cli.py
