[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-platform"
version = "0.1.0"
description = "Event-driven backtesting platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
backtest-platform = "backtest_platform.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]